--- a/tooltips/build.gradle
+++ b/tooltips/build.gradle
@@ -8,7 +8,7 @@ task generateSourcesJar(type: Jar){
 
 afterEvaluate {
     publishing {
-        def versionName = "1.3.3" // 当前版本依赖库版本号，这个jitpack不会使用到，只是我们开发者自己查看
+        def versionName = "1.3.4" // 当前版本依赖库版本号，这个jitpack不会使用到，只是我们开发者自己查看
         publications {
             // Creates a Maven publication called "release".
             release(MavenPublication) {
@@ -17,7 +17,7 @@ afterEvaluate {
 
                 // You can then customize attributes of the publication as shown below.
                 groupId = 'com.github.licoba' // 这个是依赖库的组 id
-                artifactId = 'tooltip' // 依赖库的名称（jitpack 都不会使用到）
+                artifactId = 'tooltips' // 依赖库的名称（jitpack 都不会使用到）
                 version = versionName
             }
         }
